# Gillian

./: .clang-format  .dockerignore  .envrc  .gitignore  .ocamlformat  .vscodeignore  Dockerfile  Gillian.code-workspace  Kanillian.code-workspace  LICENSE  License  Makefile  NOTICE  README.md  THIRD-PARTY-LICENSES  act.gil  bsconfig.json  dune  dune-project  esy.json  esy.odoc-test.json  flake.nix  gillian-bulk-alcotest.json  gillian-bulk-rely.json  gillian-c.opam  gillian-c.opam.template  gillian-c2.sh  gillian-js-libs.opam  gillian-js.opam  gillian-js.opam.template  gillian-llvm.opam  gillian.json  gillian.opam  gillian.opam.locked  gillian.opam.template  gillian_usage_log.jsonl  install.sh  int_migration.md  kanillian-c.sh  kanillian.opam  (+8 more)
Gillian-C/examples/basic_act/: dune  specs.expected  test.c
Gillian-C/lib/: CAnnot.ml  CMemory.ml  CMemory.mli  Chunk.ml  Constr.ml  External.ml  GEnv.ml  GEnv.mli  LActions.ml  LActions.mli  LocMap.ml  MonadicSMemory.ml  MonadicSMemory.mli  MonadicSVal.ml  Results.ml  SHeapTree.ml  SHeapTree.mli  SHeapTreeRes.ml  SMemory.ml  SMemory.ml_  SMemory.mli  SMemoryDisplayable.ml  SMemoryDisplayable.mli  SVal.ml  annot_lexer.mll  annot_parser.mly  cConstants.ml  cLogic.ml  cParserAndCompiler.ml  cParserAndCompiler.mli  cRunner.ml  compileState.ml  compileState.mli  config.ml  config_compcert.ml  dune  generators.ml  generators.mli  genv2.ml  gil_logic_gen.ml  (+14 more)
Gillian-C/lib/monadic/: FOSolver.ml  MonadicSMemory.ml  Results.ml  SatResults.ml  branch.ml  delayed.ml  dune  monadic.ml  monadic.mli  pc.ml
Gillian-C/lib/tests/: Results.ml  SHeapTree.ml  SatResults.ml  checkers.ml  delayed.ml  dune  run_tests.ml
Gillian-C/runtime/: binops_archi32_all_exec.gil  binops_archi32_bi_exec.gil  binops_archi32_non_bi.gil  binops_archi64_all_exec.gil  binops_archi64_bi_exec.gil  binops_archi64_non_bi.gil  binops_common.gil  dune  genv_allocated_functions.gil  global_environment.gil  global_environment_archi32.gil  global_environment_archi64.gil  global_environment_bi.gil  global_environment_common.gil  global_environment_non_bi.gil  internals.gil  logic_archi32.gil  logic_archi64.gil  logic_common.gil  stdlib_archi32.gil  stdlib_archi32_non_verif.gil  stdlib_archi32_verif.gil  stdlib_archi64.gil  stdlib_archi64_non_verif.gil  stdlib_archi64_verif.gil  string.gil  unops_common.gil
Gillian-C2/lib/compiler/: C2ParserAndCompiler.ml  C2ParserAndCompiler.mli  LActions.ml  body_item.ml  c2_annot.ml  c2_annot_lexer.mll  c2_annot_parser.mly  c2_lprog.ml  c2_prog.ml  compile.ml  compile_expr.ml  constr.ml  ctx.ml  dune  error.ml  generators.ml  genv.ml  gil_logic_gen.ml  helpers.ml  imports.ml  logics.ml  memory.ml  sanitize.ml  stats.ml  val_repr.ml
Gillian-C2/runtime/: archi32_constants.gil  archi64_constants.gil  archi64_logic.gil  dune  genv_allocated_functions.gil  genv_unallocated_functions.gil  global_environment_common.gil  internal_binops.gil  internal_casts.gil  internal_stdlib.gil  internals.gil  internals_act.gil  logic_common.gil  rust_allocation_internals.gil  string.gil
Gillian-JS/runtime/JS2JSIL/: Array.jsil  Date.jsil  Errors.jsil  Global.jsil  Init.jsil  InitFantine.jsil  Internals.jsil  Math.jsil  Object.jsil  dune  harness.js  initial_heap.jsil  internals_builtins_procs.jsil
Gillian-JS/runtime/JS2JSIL_BI/: BiArray.jsil  BiBoolean.jsil  BiFunction.jsil  BiHelpers.jsil  BiInit.jsil  BiInitFantine.jsil  BiInternals.jsil  BiNumber.jsil  BiObject.jsil  BiRegExp.jsil  BiString.jsil  dune
Gillian-LLVM/lib/llvm_runtime_gen/: dune  monomorphizer.ml  operations.ml
GillianCore/command_line/: act_console.ml  bulk_console.ml  c_interpreter_console.ml  command_line.ml  command_line.mli  common_args.ml  compiler_console.ml  concrete_console.ml  console.ml  debug_verification_console.ml  debug_wpst_console.ml  dune  lsp_server.ml  lsp_server.mli  runners.ml  s_interpreter_console.ml  verification_console.ml  wpst_console.ml
GillianCore/debugging/debugger/: ExecMap.ml  Gil_to_tl_lifter.ml  Gil_to_tl_lifter.mli  UnifyMap.ml  base_debugger.ml  debugger.ml  debugger.mli  debuggerTypes.ml  debuggerUtils.ml  debugger_intf.ml  dune  symbolic_debugger.ml  verification_debugger.ml
GillianCore/debugging/lifter/: Debugger_lifter.ml  GilFallbackLifter.ml  GilFallbackLifter.mli  GilLifter.ml  GilLifter.mli  Lifter.ml  Lifter.mli  Lifter_intf.ml  debugger_lifter.ml  dune  gil_fallback_lifter.ml  gil_fallback_lifter.mli  gil_fallback_lifter_intf.ml  gil_lifter.ml  gil_lifter.mli  gil_lifter_intf.ml  lifter.ml  lifter_intf.ml
GillianCore/engine/: dune
GillianCore/engine/Abstraction/: LogicPreprocessing.ml  MP.ml  MP.mli  Matcher.ml  Matcher.mli  Normaliser.ml  Normaliser.mli  PState.ml  PState.mli  Preds.ml  Preds.mli  StateCleanUp.mli_  UP.ml  UP.mli  Unifier.ml  Unifier.mli  UnifierLogging.ml  VerificationResults.ml  Verifier.ml  Verifier.mli  Wands.ml  pred_state.ml
GillianCore/engine/BiAbduction/: Abductor.ml  BiState.ml  BiState.mli
GillianCore/engine/ConcreteSemantics/: CExprEval.ml  CMemory.ml  CState.ml  CState.mli  CStore.ml  CVal.ml  Concrete.ml
GillianCore/engine/FOLogic/: FOSolver.ml  FOSolver.mli  PFS.ml  PFS.mli  Reduction.ml  Reduction.mli  Simplifications.ml  Simplifications.mli  TypEnv.ml  TypEnv.mli  Typing.ml  Typing.mli  Z3Encoding.ml  Z3Encoding.mli  smt.ml  (+5 more)
GillianCore/logging/: databaseReporter.ml  database_reporter.ml  dbReporter.ml  dbReporter.mli  default.ml  dune  fileReporter.ml  file_reporter.ml  html_reporter.ml  log.css  log.js  log.ml  logDatabase.ml  logQueryer.ml  log_database.ml  log_queryer.ml  loggable.ml  loggable.mli  loggable_intf.ml  logging.ml  logging.mli  loggingConstants.ml  logging_constants.ml  mode.ml  packedPP.ml  packed_pp.ml  phase.ml  report.atd  report.ml  reportBuilder.ml  reportId.ml  reportId.mli  report_builder.ml  report_id.ml  report_id.mli  reporter.ml
kanillian/lib/: KParserAndCompiler.ml  KParserAndCompiler.mli  dune
kanillian/runtime/: dune  genv_allocated_functions.gil  genv_unallocated_functions.gil  internal_stdlib.gil  internal_unops.gil
ppx_sat/test/: dune  out.expected  test.ml
(+1688 files in other folders)
