opam-version: "2.0"
authors: ["Sacha-Élie Ayoun", "Nat Karmios", "Petar Maksimović", "José Fragoso Santos"]
maintainer: ["GillianPlatform"]
name: "gillian"
synopsis: "A parametric compositional symbolic execution for Correctness and Incorrectness"
license: "BSD-3-Clause"
bug-reports: "https://github.com/GillianPlatform/Gillian/issues"
homepage: "https://github.com/GillianPlatform/Gillian/"
dev-repo: "git+https://github.com/GillianPlatform/Gillian.git"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" { >= "3.0" }
  "alcotest" { >= "1.0.1" }
  "cmdliner" { >= "1.1.1" }
  "dap" { = "1.0.6" }
  "fmt" { >= "0.8.8" }
  "memtrace" { = "0.2.3" }
  "menhir" { = "20231231" }
  "ppx_deriving_yojson"
  "ppxlib" { >= "0.18.0" }
  "sqlite3" { = "5.0.2" }
  "visitors" { >= "2.3" }
  "yojson" { >= "1.7.0" }
  "zarith" { >= "1.12" }
  "z3" { = "4.13.0" }
  "odoc" { with-doc }
]