(menhir
 (modules annot_parser)
 (flags --explain))

(ocamllex
 (modules annot_lexer))

(library
 (name cgil_lib)
 (libraries
  gillian
  gillian.alcotest-runner
  compcert
  batteries
  printbox
  gillian.ppx_sat.runtime
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson gillian.ppx_sat)))
