(install
 (section
  (site
   (gillian-c2 runtime)))
 (files
  global_environment_common.gil
  internal_binops.gil
  internal_unops.gil
  internal_casts.gil
  internal_stdlib.gil
  internals.gil
  internals_act.gil
  rust_allocation_internals.gil
  string.gil
  logic_common.gil)
 (package gillian-c2))
