(include_subdirs unqualified)

(library
 (name engine)
 (public_name gillian.engine)
 (libraries utils z3 menhirLib fmt cmdliner str gil_syntax gil_parsing
   logging incrementalAnalysis)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (flags :standard -open Utils -open Gil_syntax -open IncrementalAnalysis))
