(include_subdirs unqualified)

(library
 (name engine)
 (public_name gillian.engine)
 (libraries
  utils
  smt
  menhirLib
  fmt
  cmdliner
  str
  gil_syntax
  gil_parsing
  logging
  incrementalAnalysis
  debugger_log)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (flags
  :standard
  -open
  Utils
  -open
  Gil_syntax
  -open
  Utils.Prelude
  -open
  IncrementalAnalysis))
