(library
 (name logging)
 (package gillian)
 (libraries fmt sqlite3)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson)))

(rule
 (target html_reporter_aux.ml)
 (deps
  (:css log.css)
  (:js log.js))
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let css = {|")
    (cat %{css})
    (echo "|}")
    (echo "let js = {|")
    (cat %{js})
    (echo "|}")))))
