(copy_files ../../runtime/*.gil)

(rule
 (deps
  test.c
  unops_common.gil
  internals.gil
  global_environment_common.gil
  binops_common.gil
  logic_common.gil
  string.gil
  stdlib_archi64.gil
  global_environment_archi64.gil
  logic_archi64.gil
  binops_archi64_all_exec.gil
  binops_archi64_bi_exec.gil)
 (target specs)
 (action
  (with-stdout-to
   %{target}
   (run
    gillian-c
    act
    -l
    disabled
    -R
    .
    --specs-to-stdout
    --verbose-compcert
    test.c))))

; FIXME:
; there is an issue preventing this test to run on Linux and I can't figure out why. gcc is not behaving correctly
; but only in `esy test` environment...
; (rule
;  (alias runtest)
;  (deps specs)
;  (action
;   (diff specs.expected specs)))
