(library
 (name llvm_runtime_gen)
 (libraries
  gillian
  gillian.ppx_sat.runtime
  ppx_deriving_yojson.runtime
  ppx_deriving.runtime
  llvm_memory_model
  printbox-text ; we want to get rid of printbox as a dependency
  transformers.states)
 (preprocess
  (pps gillian.ppx_sat ppx_deriving_yojson ppx_deriving.std)))
